--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,8 @@ pytest-asyncio==0.23.6
 pytest-homeassistant-custom-component==0.13.111
 ruff==0.3.3
 syrupy==4.6.1
-home-assistant-intents==2024.4.3
+
+# Component dependencies
+ical>=7.0.3
+openai>=1.16.2
+home-assistant-intents>=2024.4.3
