--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -12,5 +12,6 @@ syrupy>=4.6.1
 # Component dependencies
 ical>=7.0.3
 openai>=1.16.2
+hassil>=1.7.0
 home-assistant-intents>=2024.4.3
 pymicro_vad>=1.0.2
