--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,7 +2,7 @@ mashumaro==3.13.1
 mypy==1.11.2
 pre-commit==3.8.0
 ruff==0.6.2
-pytest-homeassistant-custom-component==0.13.155
+pytest-homeassistant-custom-component==0.13.156
 
 # Don't hard pin dependencies of pytest-homeassistant-custom-component
 pytest-asyncio>=0.23.6
@@ -17,3 +17,4 @@ home-assistant-intents>=2024.4.3
 pymicro_vad>=1.0.2
 mutagen>=1.47.0
 ha-ffmpeg>=3.2.0
+pyspeex_noise>=1.0.2
