--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -18,5 +18,6 @@ pymicro_vad>=1.0.2
 mutagen>=1.47.0
 ha-ffmpeg>=3.2.0
 pyspeex_noise>=1.0.2
-google_nest_sdm>=5.0.0
+google_nest_sdm>=6.0.0
 PyNaCl>=1.5.0
+PyTurboJPEG>=1.7.5
