--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
     hooks:
       - id: codespell
         args:
-          - --ignore-words-list=hass
+          - --ignore-words-list=hass,iff
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.35.1
     hooks:
