--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
     "name": "Home Assistant Custom Component Env",
     "image": "mcr.microsoft.com/devcontainers/python:3.12-bullseye",
     "postCreateCommand": ".devcontainer/setup",
+    "postStartCommand": ".devcontainer/startup",
     "forwardPorts": [
         8123
     ],
