--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,11 +15,20 @@ repos:
     rev: 25.11.0
     hooks:
       - id: black
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.14.5"
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.14.5
     hooks:
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-check
+        types_or:
+          - python
+          - pyi
+        args:
+          - --fix
+          - --exit-non-zero-on-fix
+      - id: ruff-format
+        types_or:
+          - python
+          - pyi
   - repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
     hooks:
