Add pysilero_vad dependencies

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -15,6 +15,7 @@ openai>=1.16.2
 hassil>=3.5.0
 home-assistant-intents>=2025.12.2
 pymicro_vad>=1.0.1
+pysilero_vad>=3.0.1
 mutagen>=1.47.0
 ha-ffmpeg>=3.2.0
 pyspeex_noise>=1.0.2
